@@ -1,0 +1,2 @@
+-- Drop city id column
+ALTER TABLE zipcode DROP COLUMN city_id;
