@@ -1,0 +1,2 @@
+-- Drop city column foreign key
+ALTER TABLE zipcode DROP FOREIGN KEY zipcode_ibfk_1;
